# alonso_sql_scripts

./: .gitignore  br_uib_view.sql  business_review.sql  contract_list_view.sql  fix_street_address.py  get_iolta_deposits.py  get_litify_intake_records.py  get_litify_matter_records.py  pyproject.toml  strategy_specialists_view.sql  update_salesforce_intake_id.py
